--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/icon?family=Material+Icons"
         />
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <title>tech test</title>
     </head>
 
